<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MyMain" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/hello_world" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/nikiprofil" />

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btTutorial1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btTutorial1" />

            <Button
                android:id="@+id/btTutorial2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btTutorial2" />
            <Button
                android:id="@+id/btTutorial3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btTutorial3" />
            <Button
                android:id="@+id/btTutorial4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btTutorial4" />
            <Button
                android:id="@+id/btTutorial5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btTutorial5" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>